third_party/move/tools/move-decompiler/tests/compiler-v2-test/acquires-checker/typing/acquires_error_msg.exp
module 0x42::test {
    struct Test has key {
        value: u64,
    }
    public fun call_modify_without_acquire() {
        modify();
    }
    public fun modify() {
        &mut borrow_global_mut(0xcafe).value = 2;
    }
}

--- unable to recompile the decompiled code:
exiting with context checking errors
error: invalid assignment
  ┌─ acquires_error_msg.move:9:9
  │
9 │         &mut borrow_global_mut(0xcafe).value = 2;
  │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid assignment syntax. Expected: a local, a field write, or a deconstructing assignment
